--- a/project5-voting/Views/ElectionArea/areaName.cshtml
+++ b/project5-voting/Views/ElectionArea/areaName.cshtml
@@ -25,6 +25,30 @@
         width: 100%;
         height: auto; /* لضمان الحفاظ على نسبة العرض إلى الارتفاع */
     }
+
+    .row {
+        --bs-gutter-x: 6.5rem;
+        --bs-gutter-y: 0;
+        display: flex;
+        flex-wrap: wrap;
+        margin-top: calc(var(--bs-gutter-y)* -1);
+        margin-right: calc(var(--bs-gutter-x) / -2);
+        margin-left: calc(var(--bs-gutter-x) / -2);
+    }
+
+    h2 {
+        font-size: 66px;
+        margin-bottom: 39px;
+    }
+
+    h5, .h5 {
+        font-size: 2.25rem;
+        text-align: center;
+    }
+
+    main {
+        background-color: #f9fdf896;
+    }
 </style>
 
 
