--- a/project5-voting/Views/Home/About.cshtml
+++ b/project5-voting/Views/Home/About.cshtml
@@ -1,5 +1,5 @@
 ﻿﻿
-<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+@*<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">*@
 <style>
 
 
@@ -68,8 +68,8 @@
             box-shadow: 0 4px 8px rgba(0,0,0,0.2);
         }
 
-    h1, h2 {
-        color: #28a745; /* Green */
+    h1.text-center.mb-4, h2.text-center.mb-4 {
+        color: #28a745;
     }
 
     .description-content {
@@ -81,8 +81,7 @@
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
 </style>
-</head>
-<body>
+
     <div class="container">
         <h1 class="text-center mb-4">حول المشروع</h1>
         <div class="project-description">
@@ -157,4 +156,3 @@
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
