--- a/project5-voting/Views/Home/ploice.cshtml
+++ b/project5-voting/Views/Home/ploice.cshtml
@@ -2,8 +2,8 @@
     ViewBag.Title = "سياسات الانتخابات";
 }
 
-<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-<link href="https://cdn.jsdelivr.net/npm/sweetalert2@10/dist/sweetalert2.min.css" rel="stylesheet">
+@*<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/sweetalert2@10/dist/sweetalert2.min.css" rel="stylesheet">*@
 
 <style>
    
