--- a/project5-voting/Views/Ads/Publish.cshtml
+++ b/project5-voting/Views/Ads/Publish.cshtml
@@ -8,9 +8,10 @@
 <div class="card" style="width: 18rem;">
     <img class="card-img-top" src="~/Images/@Model.image" alt="Card image cap">
     <div class="card-body">
-        <h5 class="card-title">@Model.campaignSlagan</h5>
-        <p class="card-title">@Model.partyName</p>
+        <h5 class="card-title">@Model.name</h5>
+        <p class="card-title">@Model.areaName</p>
+        <p class="card-text">@Model.campaignSlagan</p>
         <p class="card-text">@Model.description</p>
-        <p class="card-text"><small class="text-muted">@Model.areaName</small></p>
+
     </div>
 </div>
