--- a/project5-voting/Views/Ads/Publishs.cshtml
+++ b/project5-voting/Views/Ads/Publishs.cshtml
@@ -5,7 +5,6 @@
 }
 
 
-
 <div class="container mt-5">
     <h2 class="text-center mb-4">الحملات الانتخابية</h2>
     <div class="row">
@@ -13,31 +12,24 @@
         {
             if (ad.status == "تم نشر الاعلان")
             {
-                <div class="container mt-5">
-                    <div class="row">
-                        <div class="col-md-8">
-                            <div class="card">
-                                <div class="row no-gutters">
-                                    <div class="col-md-4">
-                                        <img src="~/images/@ad.image" class="card-img" alt="Image Description">
-                                    </div>
-                                    <div class="col-md-8">
-                                        <div class="card-body">
-                                            <h5 class="card-title">@ad.nationalId</h5>
-                                            <p class="card-text">@ad.campaignSlagan</p>
-                                            <p class="card-text">@ad.areaName</p>
-                                            <p class="card-text">@ad.description</p>
-                                        </div>
-                                    </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card h-100" style="animation: fadeInRight 0.5s ease-in-out;">
+                        <div class="row no-gutters">
+                            <div class="col-md-12">
+                                <img src="~/images/@ad.image" class="card-img-top" alt="Image Description">
+                            </div>
+                            <div class="col-md-12">
+                                <div class="card-body text-right">
+                                    <h5 class="card-title">@ad.name</h5>
+                                    <p class="card-text">@ad.areaName</p>
+                                    <p class="card-text">@ad.campaignSlagan</p>
+                                    <p class="card-text">@ad.description</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <hr />
             }
         }
-
-
     </div>
 </div>
