--- a/project5-voting/Views/Ads/advertisementAdmin.cshtml
+++ b/project5-voting/Views/Ads/advertisementAdmin.cshtml
@@ -13,10 +13,11 @@
         <thead class="thead-dark">
             <tr>
                 <th>اسم المرشح</th>
+                <th>الرقم الوطني</th>
                 <th>شعار الحملة</th>
-                <th>الدائرة الانتخابية</th>
                 <th>اسم القائمة</th>
                 <th>اسم الحزب</th>
+                <th>الدائرة الانتخابية</th>
                 <th>وصف الحملة</th>
                 <th>صورة المرشح</th>
                 <th>@Html.DisplayNameFor(model => model.status)</th>
@@ -27,11 +28,12 @@
             @foreach (var item in Model)
             {
                 <tr>
+                    <td>@Html.DisplayFor(modelItem => item.name)</td>
                     <td>@Html.DisplayFor(modelItem => item.nationalId)</td>
-                    <td>@Html.DisplayFor(modelItem => item.areaName)</td>
+                    <td>@Html.DisplayFor(modelItem => item.campaignSlagan)</td>
                     <td>@Html.DisplayFor(modelItem => item.listName)</td>
                     <td>@Html.DisplayFor(modelItem => item.partyName)</td>
-                    <td>@Html.DisplayFor(modelItem => item.campaignSlagan)</td>
+                    <td>@Html.DisplayFor(modelItem => item.areaName)</td>
                     <td>@Html.DisplayFor(modelItem => item.description)</td>
                     <td>
                         <img src="~/Images/@item.image" alt="No Image" width="100" height="100" class="img-fluid" />
@@ -61,9 +63,7 @@
     .btn-group .btn {
         margin-right: 3px;
         margin-left: 5px;
-        float:right;
+        float: right;
     }
-
-
 </style>
 
