--- a/project5-voting/Views/Contacts/AdminContact.cshtml
+++ b/project5-voting/Views/Contacts/AdminContact.cshtml
@@ -4,101 +4,135 @@
     ViewBag.Title = "AdminContact";
     Layout = "~/Views/Shared/_LayoutPage1.cshtml";
 }
-<h2 class="text-center my-4">جهات الاتصال الإدارية</h2>
+<h2 class="text-center my-4">
+    اتصل بنا
+</h2>
 
-<div class="container" dir="rtl">
-    <table class="table table-bordered table-hover">
-        <thead class="thead-light">
-            <tr>
-                <th>
-                    @Html.Label("الاسم ", htmlAttributes: new { @class = "control-label col-md-8" })
-                </th>
-                <th>
-                    @Html.Label("البريد الالكتروني ", htmlAttributes: new { @class = "control-label col-md-8" })
-                </th>
-                <th>
-                    @Html.Label("البيانات ", htmlAttributes: new { @class = "control-label col-md-8" })
+<table class="table table-hover">
+    <thead class="table-primary">
+        <tr>
+            <td class="text-center"></td>
+            <td class="text-center">الحالة <span class="sort-icon">▲</span></td>
+            <th scope="col" class="sortable text-center" data-sort="time">تاريخ الارسال <span class="sort-icon">▲</span></th>
+            <th scope="col" class="sortable text-center" data-sort="date">وقت الارسال <span class="sort-icon">▲</span></th>
+            <th scope="col" class="sortable text-center" data-sort="subject">الموضع <span class="sort-icon">▲</span></th>
+            <th scope="col" class="sortable text-center" data-sort="subject">الاسم <span class="sort-icon">▲</span></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr class="party-row" data-time="@item.time" data-date="@item.date" data-subject="@item.subject" data-name="@item.name">
 
-                </th>
-                <th>
-                    @Html.Label("التاريخ ", htmlAttributes: new { @class = "control-label col-md-8" })
-                </th>
-                <th>
-                    @Html.Label("الموضوع ", htmlAttributes: new { @class = "control-label col-md-8" })
+                <td class="text-center">
+                    <a href="@Url.Action("Delete", new { id = item.id })" class="btn btn-danger btn-sm ml-1">حذف</a>
 
-                </th>
-                <th>
-                    @Html.Label("الرسالة ", htmlAttributes: new { @class = "control-label col-md-8" })
-
-                </th>
-                <th>
-                    @Html.Label("الحالة ", htmlAttributes: new { @class = "control-label col-md-8" })
-
-                </th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model)
-            {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.name)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.email)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.date)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.time)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.subject)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.message)
-                    </td>
-                    <td class="text-center">
-                        @{
-                            if (item.status == null)
-                            {
-                                <span class="text-danger">Incomplete</span>
-                            }
-                            else
-                            {
-                                <span class="text-success">Completed</span>
-                            }
-                        }
-                    </td>
-                    <td class="text-center">
-                        @if (item.status == null)
+                    @Html.ActionLink("التفاصيل", "ContactDetails", new { id = item.id }, new { @class = "btn btn-secondary btn-sm ml-1" })
+                    @if (item.status == null)
+                    {
+                        @Html.ActionLink("رد", "Response", new { id = item.id }, new { @class = "btn btn-info btn-sm ml-1" })
+                    }
+                    else
+                    {
+                        <button class="btn btn-info btn-sm ml-1" onclick="displayAlert()">رد</button>
+                    }
+                </td>
+                <td class="text-center">
+                    @{
+                        if (item.status == null)
                         {
-                            @Html.ActionLink("رد", "Response", new { id = item.id }, new { @class = "btn btn-info btn-sm ml-1" })
+                            <span class="text-danger">Incomplete</span>
                         }
                         else
                         {
-                            <button class="btn btn-info btn-sm ml-1" onclick="displayAlert()">رد</button>
+                            <span class="text-success">Completed</span>
                         }
+                    }
+                </td>
+                <td class="text-center">
+                    @Html.DisplayFor(modelItem => item.time)
+                </td>
+                <td class="text-center">
+                    @Html.DisplayFor(modelItem => item.date)
+                </td>
+                <td class="text-center">
+                    @Html.DisplayFor(modelItem => item.subject)
+                </td>
+                <td class="text-center">
+                    @Html.DisplayFor(modelItem => item.name)
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
 
-                        @Html.ActionLink("التفاصيل", "ContactDetails", new { id = item.id }, new { @class = "btn btn-secondary btn-sm ml-1" })
 
-                        <a href="@Url.Action("Delete", new { id = item.id })" class="btn btn-danger btn-sm ml-1">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
-                                <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z" />
-                                <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z" />
-                            </svg>
-                        </a>
-                    </td>
-                </tr>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script type="text/javascript">
+    $(document).ready(function () {
+        var asc = true;
+
+        $(".sortable").click(function () {
+            var column = $(this).data("sort");
+            var rows = $(".party-row").get();
+
+            rows.sort(function (a, b) {
+                var A = $(a).data(column);
+                var B = $(b).data(column);
+
+                // Check for number or date type
+                if ($.isNumeric(A) && $.isNumeric(B)) {
+                    A = parseFloat(A);
+                    B = parseFloat(B);
+                } else if (Date.parse(A) && Date.parse(B)) {
+                    A = new Date(A).getTime();
+                    B = new Date(B).getTime();
+                } else {
+                    A = A.toLowerCase();
+                    B = B.toLowerCase();
+                }
+
+                if (asc) {
+                    return (A < B) ? -1 : (A > B) ? 1 : 0;
+                } else {
+                    return (A > B) ? -1 : (A < B) ? 1 : 0;
+                }
+            });
+
+            asc = !asc;
+            $.each(rows, function (index, row) {
+                $("tbody").append(row);
+            });
+
+            $(".sort-icon").text("▲");
+            if (!asc) {
+                $(this).find(".sort-icon").text("▼");
             }
-        </tbody>
-    </table>
-</div>
+        });
+
+        // Search functionality
+        $("#searchInput").on("keyup", function () {
+            var value = $(this).val().toLowerCase();
+            $(".party-row").filter(function () {
+                $(this).toggle($(this).data("name").toLowerCase().indexOf(value) > -1);
+            });
+        });
+    });
+</script>
+
 
 <script type="text/javascript">
     function displayAlert() {
-        Swal.fire("لقد تم الرد على هذه الرسالة من قبل");
+        Swal.fire({
+            title: "لقد تم الرد على هذه الرسالة",
+            text: "لرؤية الرد يمكن الضغط على التفاصيل",
+            showConfirmButton: false,
+            timer: 2800,
+
+        });
     }
+
+
 </script>
+
