--- a/project5-voting/Views/Contacts/ContactDetails.cshtml
+++ b/project5-voting/Views/Contacts/ContactDetails.cshtml
@@ -8,66 +8,71 @@
 
 
 
-<div class="card" dir="rtl" style="width: 700px; margin:20px auto">
+<div class="card" dir="rtl" style="width: 700px; margin: 120px auto">
     <div class="card-body">
 
-        <h5 class="card-title text-center mb-4">تفاصيل الاتصال</h5>
+        <h2 class="text-center my-4">تفاصيل الاتصال</h2>
 
         <div class="row g-3">
             <div class="col-md-6">
-                <label class="form-label">الاسم</label>
+                <p class="form-label" style="text-align:right; margin-bottom:10px !important">الاسم</p>
                 @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
             </div>
             <div class="col-md-6">
-                <label class="form-label">البريد الإلكتروني</label>
+                <p class="form-label" style="text-align:right; margin-bottom:10px !important">البريد الإلكتروني</p>
                 @Html.EditorFor(model => model.email, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
             </div>
         </div>
 
         <div class="row g-3 mt-3">
             <div class="col-md-6">
-                <label class="form-label">التاريخ</label>
+                <p class="form-label" style="text-align:right; margin-bottom:10px !important">التاريخ</p>
                 @Html.EditorFor(model => model.date, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
             </div>
             <div class="col-md-6">
-                <label class="form-label">الوقت</label>
+                <p class="form-label" style="text-align:right; margin-bottom:10px !important">الوقت</p>
                 @Html.EditorFor(model => model.time, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
             </div>
         </div>
 
         <div class="row g-3 mt-3">
             <div class="col-12">
-                <label class="form-label">الموضوع</label>
+                <p class="form-label" style="text-align:right; margin-bottom:10px !important">الموضوع</p>
                 @Html.EditorFor(model => model.subject, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
             </div>
         </div>
 
         <div class="row g-3 mt-3">
             <div class="col-12">
-                <label class="form-label">الرسالة</label>
+                <p class="form-label" style="text-align:right; margin-bottom:10px !important">الرسالة</p>
                 @Html.TextAreaFor(model => model.message, new { @class = "form-control", @style = "height: 100px;", @readonly = "readonly" })
             </div>
         </div>
 
         <div class="row g-3 mt-3">
-            <div class="col-12">
-                <label class="form-label">الحالة</label>
+            <div class="col-12" style="text-align: right;">
+                <p class="form-label" style="text-align: right; margin-bottom: 10px !important; margin-right: 6px">الحالة</p>
                 @{
                     if (Model.status == null)
                     {
-                        <p class="text-danger">غير مكتمل</p>
+                        <p class="text-danger" style="text-align: right; margin-bottom: 10px; margin-right: 6px">لم يتم الرد</p>
                     }
                     else
                     {
-                        <p class="text-success">مكتمل</p>
-                        @Html.ActionLink("عرض الرد", "ShowResponse", new { id = Model.id }, new { @class = "btn btn-info" })
+                        <p class="text-success" style="text-align: right; margin-bottom: 10px; margin-right: 6px">تم الرد</p>
+                        @Html.ActionLink(
+                             "عرض الرد",
+                             "ShowResponse",
+                             new { id = Model.id },
+                             new { @class = "btn btn-info", style = "text-align: right; margin-bottom: 10px; margin-right: 5px" }
+                        )
                     }
                 }
             </div>
         </div>
 
         <div class="text-center mt-4">
-            @Html.ActionLink("العودة", "AdminContact", new { id = Model.id }, new { @class = "btn btn-secondary mx-2" })
+            @Html.ActionLink("العودة", "AdminContact", new { id = Model.id }, new { @class = "btn btn-secondary mx-2", })
         </div>
     </div>
 </div>
@@ -76,3 +81,15 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+
+<script type="text/javascript">
+function displayAlert() {
+        Swal.fire({
+            title: "تم ارسال الرد بنجاح",
+            text: "لرؤية الرد يمكن الضغط على التفاصيل",
+            icon: "success",
+            showConfirmButton: false,
+            timer: 2800,
+
+        });
+    }</script>
