--- a/project5-voting/Views/Contacts/Delete.cshtml
+++ b/project5-voting/Views/Contacts/Delete.cshtml
@@ -4,8 +4,8 @@
     ViewBag.Title = "Delete";
 }
 
-<main>
-    <div class="card" dir="rtl" style="width: 700px; margin: 20px auto; text-align: center;">
+<<main>
+    <div class="card" dir="rtl" style="width: 700px; margin: 120px auto; text-align: center;">
         <div class="card-body">
 
             <img src="~/images/delete.png" alt="Alternate Text" width="100" height="100" class="mb-4" />
@@ -13,16 +13,33 @@
             <h3>هل أنت متأكد أنك تريد الحذف؟</h3>
 
             <div class="mt-4">
-                @using (Html.BeginForm())
+                @using (Html.BeginForm("Delete", "Contacts", FormMethod.Post, new { @onsubmit = "displayAlert(this); return false;" }))
                 {
                     @Html.AntiForgeryToken()
 
                     <div class="form-actions no-color">
                         <input type="submit" value="حذف" class="btn btn-danger mx-2" />
-                        @Html.ActionLink("العودة", "AdminContact", "Contacts", new { area = "" }, new { @class = "btn btn-secondary mx-2" })
+                        @Html.ActionLink("العودة", "AdminContact", "Contacts", new { area = "" }, new { @class = "btn btn-info mx-2" })
                     </div>
                 }
             </div>
         </div>
     </div>
 </main>
+
+
+
+
+<script type="text/javascript">function displayAlert(form) {
+        Swal.fire({
+            icon: 'warning', // Icon should be a string
+            title: "لقد تم حذف هذه الرسالة", // Corrected Arabic text
+            showConfirmButton: false,
+            timer: 2000
+        });
+
+        setTimeout(function () {
+            form.submit();
+        }, 2000);
+    }</script>
+
