--- a/project5-voting/Views/Contacts/Response.cshtml
+++ b/project5-voting/Views/Contacts/Response.cshtml
@@ -8,59 +8,75 @@
 
 
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Response", "Contacts", FormMethod.Post, new { @onsubmit = "displayAlert(this); return false;" }))
 {
     @Html.AntiForgeryToken()
 
-<div class="card" dir="rtl" style="width: 700px; margin:20px auto" >
-    <div class="card-body">
+    <div class="card" dir="rtl" style="width: 700px; margin:100px auto">
+        <div class="card-body">
 
-        <h5 class="card-title text-center mb-4">رد</h5>
+            <h2 class="text-center my-4">الرد الخاص بالادارة</h2>
 
-        <div class="row g-3">
-            <div class="col-md-6">
-                <label class="form-label">الاسم</label>
-                @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
-            </div>
-            <div class="col-md-6">
-                <label class="form-label">البريد الإلكتروني</label>
-                @Html.EditorFor(model => model.email, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
-            </div>
+            <div class="row g-3">
+                <div class="col-md-6">
+                    <p class="form-label" style="text-align:right; margin-bottom:0 !important">الاسم</p>
+                    @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control mb-3", @readonly = "readonly" } })
+                </div>
+                <div class="col-md-6">
+                    <p class="form-label" style="text-align:right ; margin-bottom:0 !important" ">البريد الإلكتروني</p>
+                    @Html.EditorFor(model => model.email, new { htmlAttributes = new { @class = "form-control mb-3", @readonly = "readonly" } })
+                </div>
 
-            <div class="col-12">
-                <label class="form-label">اسم المسؤول</label>
-                @Html.EditorFor(model => model.adminName, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
-            </div>
+                <div class="col-12">
+                    <p class="form-label" style="text-align:right ; margin-bottom:0 !important" ">اسم المسؤول</p>
+                    @Html.EditorFor(model => model.adminName, new { htmlAttributes = new { @class = "form-control mb-3", @readonly = "readonly" } })
+                </div>
 
-            <div class="col-12">
-                <label class="form-label">الموضوع</label>
-                @Html.EditorFor(model => model.subject, new { htmlAttributes = new { @class = "form-control" } })
-            </div>
+                <div class="col-12">
+                    <p class="form-label" style="text-align:right ; margin-bottom:0 !important" ">الموضوع</p>
+                    @Html.EditorFor(model => model.subject, new { htmlAttributes = new { @class = "form-control mb-3" } })
+                </div>
 
-            <div class="col-12">
-                <label class="form-label">الرد على الرسالة</label>
-                @Html.TextAreaFor(model => model.adminResponse, new { @class = "form-control", @id = "floatingTextarea", @style = "height: 100px;" })
-            </div>
+                <div class="col-12">
+                    <p class="form-label" style="text-align:right ; margin-bottom:0 !important" ">الرد على الرسالة</p>
+                    @Html.TextAreaFor(model => model.adminResponse, new { @class = "form-control mb-3", @id = "floatingTextarea", @style = "height: 100px;" })
+                </div>
 
-            <div style="display: none">
-                @Html.EditorFor(model => model.date, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.EditorFor(model => model.time, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.EditorFor(model => model.message, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.EditorFor(model => model.status, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.EditorFor(model => model.rsponseDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.EditorFor(model => model.rsponseTime, new { htmlAttributes = new { @class = "form-control" } })
-            </div>
+                <div style="display: none">
+                    @Html.EditorFor(model => model.date, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.time, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.message, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.status, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.rsponseDate, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.rsponseTime, new { htmlAttributes = new { @class = "form-control" } })
+                </div>
 
-            <div class="text-center mt-4">
-                @Html.ActionLink("العودة", "AdminContact", "Contacts", new { @class = "btn btn-secondary mx-2" })
-                <input type="submit" value="إرسال" class="btn btn-primary mx-2" />
+                <div class="text-center mt-4">
+                    @Html.ActionLink("العودة", "AdminContact", "Contacts", new { @class = "btn btn-secondary mx-2" })
+                    <input type="submit" value="إرسال" class="btn btn-info mx-2 " onclick="displayAlert()" />
+                </div>
             </div>
         </div>
-
     </div>
-</div>
 }
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+
+<script type="text/javascript">
+
+
+    function displayAlert(form) {
+        Swal.fire({
+            title: "لقد تم الرد على هذه الرسالة",
+            text: "لرؤية الرد يمكن الضغط على التفاصيل",
+            showConfirmButton: false,
+            timer: 3000
+        });
+
+        setTimeout(function () {
+            form.submit();
+        }, 3000);
+    }
+</script>
