--- a/project5-voting/Views/ElectionArea/listsDetails.cshtml
+++ b/project5-voting/Views/ElectionArea/listsDetails.cshtml
@@ -36,15 +36,26 @@
         }
 
         .card h5 {
-            margin: 10px 0;
+            position: absolute;
+            left: 100px;
+            top: 19px;
+            font-size: 45px;
+            padding-bottom: -22px;
+            margin: 7px 2px;
         }
 
+
+
     .btn-primary {
-        background-color: #007bff;
-        border-color: #007bff;
+        position: absolute;
+        top: 105px;
+        left: 84px;
+        font-size: 18px;
+        background-color: #28a745;
+        border-color: #28a745;
         color: white;
         padding: 10px 20px;
-        border-radius: 5px;
+        border-radius: 6px;
         text-decoration: none;
     }
 
@@ -52,6 +63,17 @@
             background-color: #0056b3;
             border-color: #004085;
         }
+
+    h2 {
+        font-size: 66px;
+    }
+
+    .card-body {
+        flex: 1 1 auto;
+        padding: 5rem 0rem;
+        border: 2px solid #28a745; /* Green border */
+        box-shadow: 0 4px 8px rgba(40, 167, 69, 0.5); /* Green shadow */
+    }
 </style>
 
 <div class="container">
@@ -74,7 +96,3 @@
         }
     </div>
 </div>
-
-<p>
-    @Html.ActionLink("Back to List", "localAndparty")
-</p>
