--- a/project5-voting/Views/party/IndexAdmin.cshtml
+++ b/project5-voting/Views/party/IndexAdmin.cshtml
@@ -3,7 +3,6 @@
 @{
     ViewBag.Title = "IndexAdmin";
     Layout = "~/Views/Shared/_LayoutPage1.cshtml";
-
 }
 
 <div class="container mt-5">
@@ -22,7 +21,7 @@
     </div>
 
     <table class="table table-hover">
-        <thead class="table-primary">
+        <thead class="thead-dark">
             <tr>
                 <th scope="col">الصورة</th>
                 <th scope="col" class="sortable" data-sort="partyName">اسم الحزب <span class="sort-icon">▲</span></th>
@@ -36,11 +35,10 @@
                 var badgeClass = item.status == "1" ? "badge-success" : "badge-secondary";
                 var statusText = item.status == "1" ? "فعال" : "غير فعال";
                 var rowClass = item.status == "1" ? "active" : "inactive";
-
-                var imageUrl = item.status == "1" ? Url.Content("~/images/تم الموافقه على طلب.png") : Url.Content("~/images/طلب قيد دراسة.png");
+                var imageUrl = string.IsNullOrEmpty(item.partyImage) ? Url.Content("~/images/default-party.png") : Url.Content(item.partyImage);
 
                 <tr class="party-row" data-status="@rowClass" data-partyname="@item.partyName" data-status-value="@item.status">
-                    <td><img src="@imageUrl" alt="Party Image" class="img-fluid rounded-circle" style="height: 50px; width: 50px; object-fit: cover;"></td>
+                    <td><img src="../../Image1/@imageUrl" alt="Party Image" class="img-fluid rounded-circle" style="height: 50px; width: 50px; object-fit: cover;"></td>
                     <td>
                         <div class="d-flex flex-column">
                             <span>@Html.DisplayFor(modelItem => item.partyName)</span>
@@ -49,9 +47,8 @@
                     <td><span class="badge @badgeClass">@statusText</span></td>
                     <td>
                         <div class="btn-group" role="group">
-                            @Html.ActionLink("حذف", "Delete", new { id = item.id }, new { @class = "btn btn-danger btn-sm mx-1" })
-                            <button class="btn btn-primary btn-sm goToNextPage" data-partyname="@item.partyName">اذهب إلى التفاصيل</button>
-                            @*@Html.ActionLink("اذهب إلى التفاصيل", "AdminView", new { id = item.id }, new { @class = "btn btn-primary btn-sm" })*@
+                            @Html.ActionLink("حذف", "DeleteAdmin", new { id = item.id }, new { @class = "btn btn-danger btn-sm mx-1" })
+                            @Html.ActionLink("اذهب إلى التفاصيل", "AdminView", new { partyName = item.partyName }, new { @class = "btn btn-success btn-sm mx-1" })
                         </div>
                     </td>
                 </tr>
@@ -60,11 +57,11 @@
     </table>
 </div>
 
-@{
+@section Scripts {
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="text/javascript">
-        $(document).ready(function() {
-            $(".filter-btn").click(function() {
+        $(document).ready(function () {
+            $(".filter-btn").click(function () {
                 var status = $(this).data("status");
                 if (status === "all") {
                     $(".party-row").show();
@@ -74,21 +71,12 @@
                 }
             });
 
-            $(".goToNextPage").click(function() {
-                var partyName = $(this).data("partyname");
-                $.post('@Url.Action("StorePartyNameInSession", "Party")', { partyName: partyName }, function(data) {
-                    if (data.success) {
-                        window.location.href = '@Url.Action("AdminView", "Party")';
-                    }
-                });
-            });
-
             // Sorting functionality
             var asc = true;
-            $(".sortable").click(function() {
+            $(".sortable").click(function () {
                 var column = $(this).data("sort");
                 var rows = $(".party-row").get();
-                rows.sort(function(a, b) {
+                rows.sort(function (a, b) {
                     var A = $(a).data(column);
                     var B = $(b).data(column);
 
@@ -99,7 +87,7 @@
                     }
                 });
                 asc = !asc;
-                $.each(rows, function(index, row) {
+                $.each(rows, function (index, row) {
                     $("tbody").append(row);
                 });
                 $(".sort-icon").text("▲");
@@ -109,9 +97,9 @@
             });
 
             // Search functionality
-            $("#searchInput").on("keyup", function() {
+            $("#searchInput").on("keyup", function () {
                 var value = $(this).val().toLowerCase();
-                $(".party-row").filter(function() {
+                $(".party-row").filter(function () {
                     $(this).toggle($(this).data("partyname").toLowerCase().indexOf(value) > -1)
                 });
             });
@@ -182,7 +170,7 @@
             margin-left: 5px;
         }
 
-    thead.table-primary {
+    thead.thead-dark {
         background-color: #2c3e50; /* Navy blue color */
         color: white;
     }
@@ -195,6 +183,3 @@
     }
     }
 </style>
-
-
-
